--- a/src/main/resources/templates/calendar/attend/myAttendPaging.html
+++ b/src/main/resources/templates/calendar/attend/myAttendPaging.html
@@ -34,10 +34,11 @@
                 </tr>
                 <!-- 변경가능 -->
                 <tr>
-                    <th>번호아이디</th>
+                    <th>내 아이디</th>
                     <!--              <th>비빌번호</th>-->
                     <th>출석 날짜</th>
                     <th>퇴근 날짜</th>
+                    <th sec:authorize="hasRole('ADMIN')">근태 내역 수정</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -45,11 +46,12 @@
                 <tr th:each="attendDto: ${attendDtoPage}">
                     <form th:action="@{/attend/attendanceDetail}" method="post" th:object="${attendDto}">
                         <input type="text" id="attendId" name="attendId" th:value="${attendDto.attendId}" hidden="hidden">
-                    <td th:text="${attendDto.attendId}"></td>
+                    <td th:text="${attendDto.email}"></td>
                     <td th:text="${#temporals.format(attendDto.attendStart, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                    <td th:text="${#temporals.format(attendDto.attendEnd, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:if="${attendDto.attendEnd}==null">퇴근을 찍지 않았습니다</td>
+                    <td th:unless="${attendDto.attendEnd}==null" th:text="${#temporals.format(attendDto.attendEnd, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <!--             <td th:text="${member.password}"></td>-->
-                        <td><input type="submit" value="자세히보기"></td>
+                        <td sec:authorize="hasRole('ADMIN')"><input type="submit" value="자세히 보기"></td>
                     <!--<td><a th:href="@{/member/detail(id=${member.id}}">보기</a></td>-->
                     </form>
                 </tr>
