--- a/src/main/resources/templates/calendar/memberSchedule/officialList.html
+++ b/src/main/resources/templates/calendar/memberSchedule/officialList.html
@@ -18,6 +18,7 @@
             <div class="notice">
                 <h2>일정 목록</h2>
                 <div class="con2">
+                    <a href="/memberSchedule/memberSchedule"  class="memberSchedule">개인 일정 달력</a><br>
 <a href="/memberSchedule/mySchedulePlus" class="MemberSchedule">개인 일정 추가</a><br>
 <a href="/memberSchedule/myScheduleView" class="MemberSchedule">개인 일정 조회</a><br>
 <a href="/memberSchedule/myScheduleList" class="MemberSchedule">어드민 개인 전체 일정 관리 (권한 admin일떄 보이기)</a>
