--- a/src/main/resources/templates/calendar/teamSchedule/officialList.html
+++ b/src/main/resources/templates/calendar/teamSchedule/officialList.html
@@ -18,8 +18,7 @@
             <div class="notice">
                 <h2>일정 목록</h2>
                 <div class="con2">
-                    <a href="/calendar/exCalendar">달력예시</a>
-<a href="/calendar/teamSchedule"  class="TeamSchedule">팀 일정 달력</a><br>
+<a href="/teamSchedule/teamSchedule"  class="TeamSchedule">팀 일정 달력</a><br>
 
 <a href="/teamSchedule/teamSchedulePlus"  class="TeamSchedule">팀 일정 추가</a><br>
 <a href="/teamSchedule/teamScheduleView"  class="TeamSchedule">팀 일정 조회</a><br>
