--- a/src/main/resources/templates/admin/adminNoticeList.html
+++ b/src/main/resources/templates/admin/adminNoticeList.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>adminBoardList</title>
-    <link rel="stylesheet" th:href="@{/css/admin/adminBoardList.css}">
+    <title>adminNoticeList</title>
+    <link rel="stylesheet" th:href="@{/css/admin/adminNoticeList.css}">
 
 </head>
 
@@ -14,32 +14,30 @@
         <div th:replace="~{fragment/common/leftMenu :: leftMenuFragment}"></div>
         <div class="right-menu">
             <div class="con">
-                <h2>게시판 관리</h2>
+                <h2>공지사항 관리</h2>
                 <div class="right-con">
                     <div class="con-box">
                         <table border="1">
                             <thead>
                                 <tr>
-                                    <th>게시글번호</th>
-                                    <th>게시글제목</th>
-                                    <th>게시글내용</th>
+                                    <th>번호</th>
+                                    <th>제목</th>
+                                    <th>내용</th>
                                     <th>조회수</th>
                                     <th>등록일</th>
-                                    <th>댓글수</th>
-                                    <th>작성자</th>
+                                    <th>수정일</th>
                                     <th>상세</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr th:each="board : ${boardList}">
-                                    <td th:text="${board.boardId}"></td>
-                                    <td th:text="${board.boardTitle}"></td>
-                                    <td th:text="${board.boardContent}"></td>
-                                    <td th:text="${board.boardHit}"></td>
-                                    <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-                                    <td th:text="${board.boardCmcount}"></td>
-                                    <td th:text="${board.mName}"></td>
-                                    <td><a th:href="@{|/board/boardDetail/${board.boardId}|}">보기</a></td>
+                                <tr th:each="notice : ${noticeList}">
+                                    <td th:text="${notice.noticeId}"></td>
+                                    <td th:text="${notice.noticeTitle}"></td>
+                                    <td th:text="${notice.noticeContent}"></td>
+                                    <td th:text="${notice.noticeHit}"></td>
+                                    <td th:text="${#temporals.format(notice.noticeCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                    <td th:text="${#temporals.format(notice.noticeUpdate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                    <td><a th:href="@{|/notice/noticeDetail/${notice.noticeId}|}">보기</a></td>
                                 </tr>
     
                             </tbody>
@@ -47,12 +45,12 @@
                         </table>
                         <div class="tools">
                             <div class="search">
-                                <form th:action="@{/board/adminBoardSearch}" method="get">
+                                <form th:action="@{/notice/adminNoticeSearch}" method="get">
                                     <select name="type" id="type">
                                         <option value="" selected>::검색기준::</option>
-                                        <option value="boardId">게시글번호</option>
-                                        <option value="boardTitle">게시글제목</option>
-                                        <option value="boardContent">게시글내용</option>
+                                        <option value="noticeId">번호</option>
+                                        <option value="noticeTitle">제목</option>
+                                        <option value="noticeContent">내용</option>
                                     </select>
                                     <input type="text" name="search" id="search">
                                     <input type="submit" value="검색">
@@ -61,34 +59,34 @@
                             <div class="page">
                                 <ul>
                                     <li>
-                                    <span th:if="${1 == boardList.pageable.pageNumber+1}">≪</span>
-                                    <a th:unless="${1 == boardList.pageable.pageNumber+1}"
-                                        th:href="@{/board/adminBoardList(page=0)}">≪</a>
+                                    <span th:if="${1 == noticeList.pageable.pageNumber+1}">≪</span>
+                                    <a th:unless="${1 == noticeList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminNoticeList(page=0)}">≪</a>
                                     </li>
                         
                                     <li>
-                                    <span th:if="${1 == boardList.pageable.pageNumber+1}">＜</span>
-                                    <a th:unless="${1 == boardList.pageable.pageNumber+1}"
-                                        th:href="@{/board/adminBoardList(page=${ boardList.pageable.pageNumber - 1})}">＜</a>
+                                    <span th:if="${1 == noticeList.pageable.pageNumber+1}">＜</span>
+                                    <a th:unless="${1 == noticeList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminNoticeList(page=${ noticeList.pageable.pageNumber - 1})}">＜</a>
                                     </li>
                         
                         
                                     <!-- 페이지 번호 -->
                                     <li th:each="i: ${#numbers.sequence(startPage, endPage)}">
-                                    <span th:if="${i == boardList.pageable.pageNumber+1}" style="color: red; font-weight: bold;" th:text="${i}"></span>
-                                    <a th:unless="${i == boardList.pageable.pageNumber+1}"
-                                        th:href="@{/board/adminBoardList(page=${ i - 1})}" th:text="${i}"></a>
+                                    <span th:if="${i == noticeList.pageable.pageNumber+1}" style="color: red; font-weight: bold;" th:text="${i}"></span>
+                                    <a th:unless="${i == noticeList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminNoticeList(page=${ i - 1})}" th:text="${i}"></a>
                                     </li>
                                     <li>
-                                    <span th:if="${boardList.totalPages == boardList.pageable.pageNumber+1}">＞</span>
-                                    <a th:unless="${boardList.totalPages == boardList.pageable.pageNumber+1}"
-                                        th:href="@{/board/adminBoardList(page=${ boardList.pageable.pageNumber + 1})}">＞</a>
+                                    <span th:if="${noticeList.totalPages == noticeList.pageable.pageNumber+1}">＞</span>
+                                    <a th:unless="${noticeList.totalPages == noticeList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminNoticeList(page=${ noticeList.pageable.pageNumber + 1})}">＞</a>
                                     </li>
                         
                                     <li>
-                                    <span th:if="${boardList.totalPages == boardList.pageable.pageNumber+1}">≫</span>
-                                        <a th:unless="${boardList.totalPages == boardList.pageable.pageNumber+1}"
-                                            th:href="@{/board/adminBoardList(page=${boardList.totalPages-1})}">≫</a>
+                                    <span th:if="${noticeList.totalPages == noticeList.pageable.pageNumber+1}">≫</span>
+                                        <a th:unless="${noticeList.totalPages == noticeList.pageable.pageNumber+1}"
+                                            th:href="@{/board/adminNoticeList(page=${noticeList.totalPages-1})}">≫</a>
                                     </li>
                                 </ul>
                             </div>
