--- a/src/main/resources/templates/admin/adminBoardList.html
+++ b/src/main/resources/templates/admin/adminBoardList.html
@@ -17,28 +17,16 @@
                 <h2>게시판 관리</h2>
                 <div class="right-con">
                     <div class="con-box">
-                        <div class="search">
-                            <form th:action="@{/board/adminBoardSearch}" method="get">
-                                <select name="type" id="type">
-                                    <option value="" selected>::검색기준::</option>
-                                    <option value="boardId">게시글번호</option>
-                                    <option value="boardTitle">게시글제목</option>
-                                    <option value="boardContent">게시글내용</option>
-                                </select>
-                                <input type="text" name="search" id="search">
-                                <input type="submit" value="검색">
-                            </form>
-                        </div>
-                        <table>
+                        <table border="1">
                             <thead>
                                 <tr>
-                                    <th>게시글번호</th>
-                                    <th>게시글제목</th>
-                                    <th>게시글내용</th>
+                                    <th>번호</th>
+                                    <th>제목</th>
+                                    <th>내용</th>
                                     <th>조회수</th>
                                     <th>등록일</th>
                                     <th>댓글수</th>
-                                     <th>작성자</th>
+                                    <th>작성자</th>
                                     <th>상세</th>
                                 </tr>
                             </thead>
@@ -57,19 +45,52 @@
                             </tbody>
     
                         </table>
-                        <div class="nav">
-    
+                        <div class="tools">
+                            <div class="search">
+                                <form th:action="@{/board/adminBoardSearch}" method="get">
+                                    <select name="type" id="type">
+                                        <option value="" selected>::검색기준::</option>
+                                        <option value="boardId">게시글번호</option>
+                                        <option value="boardTitle">게시글제목</option>
+                                        <option value="boardContent">게시글내용</option>
+                                    </select>
+                                    <input type="text" name="search" id="search">
+                                    <input type="submit" value="검색">
+                                </form>
+                            </div>
                             <div class="page">
-                                <div class="paging">
-                                    <a th:href="${boardList.first} ? '#' : @{/board/adminBoardList(page=${boardList.number-1})}">이전</a>
-                                    <th:block th:each="page : ${#numbers.sequence(startPage,endPage)}">
-                                        <span th:if="${page == nowPage}" th:text="${page}" style="background-color: yellow;"></span>
-                                        <span th:unless="${page == nowPage}">
-                                        <a th:href="@{/board/adminBoardList(page=${page-1})}" th:text="${page}"></a>
-                                    </span>
-                                    </th:block>
-                                    <a th:href="${boardList.last} ? '#' : @{/board/adminBoardList(page=${boardList.number+1})}">다음</a>
-                                </div>
+                                <ul>
+                                    <li>
+                                    <span th:if="${1 == boardList.pageable.pageNumber+1}">≪</span>
+                                    <a th:unless="${1 == boardList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminBoardList(page=0)}">≪</a>
+                                    </li>
+                        
+                                    <li>
+                                    <span th:if="${1 == boardList.pageable.pageNumber+1}">＜</span>
+                                    <a th:unless="${1 == boardList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminBoardList(page=${ boardList.pageable.pageNumber - 1})}">＜</a>
+                                    </li>
+                        
+                        
+                                    <!-- 페이지 번호 -->
+                                    <li th:each="i: ${#numbers.sequence(startPage, endPage)}">
+                                    <span th:if="${i == boardList.pageable.pageNumber+1}" style="color: red; font-weight: bold;" th:text="${i}"></span>
+                                    <a th:unless="${i == boardList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminBoardList(page=${ i - 1})}" th:text="${i}"></a>
+                                    </li>
+                                    <li>
+                                    <span th:if="${boardList.totalPages == boardList.pageable.pageNumber+1}">＞</span>
+                                    <a th:unless="${boardList.totalPages == boardList.pageable.pageNumber+1}"
+                                        th:href="@{/board/adminBoardList(page=${ boardList.pageable.pageNumber + 1})}">＞</a>
+                                    </li>
+                        
+                                    <li>
+                                    <span th:if="${boardList.totalPages == boardList.pageable.pageNumber+1}">≫</span>
+                                        <a th:unless="${boardList.totalPages == boardList.pageable.pageNumber+1}"
+                                            th:href="@{/board/adminBoardList(page=${boardList.totalPages-1})}">≫</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
