--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -133,7 +133,7 @@
                                     <a th:href="@{/member/memberList}">회원관리</a>
                                 </li>
                                 <li>
-                                    <a th:href="@{#}">공지사항관리</a>
+                                    <a th:href="@{/board/adminNoticeList}">공지사항관리</a>
                                 </li>
                                 <li>
                                     <a th:href="@{/board/adminBoardList}">게시판관리</a>
