조직관리 구분, 포지션별

--- a/src/main/resources/static/css/member/positionSt.css
+++ b/src/main/resources/static/css/member/positionSt.css
@@ -2,7 +2,7 @@
 @import url(/css/common/adminHeader.css);
 @import url(/css/common/leftMenu.css);
 
-/*조직관리*/
+/*조직관리(공격수)*/
 #wrap{
   width: 100%;
   /* border: 5px solid #000000; */
