--- a/src/main/resources/templates/member/positionDf.html
+++ b/src/main/resources/templates/member/positionDf.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>조직 관리</title>
-  <link rel="stylesheet" th:href="@{/css/member/management.css}">
+  <link rel="stylesheet" th:href="@{/css/member/positionDf.css}">
 </head>
 
 <body>
