--- a/src/main/resources/static/css/member/positionGk.css
+++ b/src/main/resources/static/css/member/positionGk.css
@@ -2,7 +2,7 @@
 @import url(/css/common/adminHeader.css);
 @import url(/css/common/leftMenu.css);
 
-/*조직관리*/
+/*조직관리(골키퍼)*/
 #wrap{
   width: 100%;
   /* border: 5px solid #000000; */
