--- a/src/main/resources/templates/fragment/common/leftMenu.html
+++ b/src/main/resources/templates/fragment/common/leftMenu.html
@@ -17,7 +17,7 @@
                                     <a th:href="@{/member/update}">회원수정</a>
                                 </li>
                                 <li>
-                                    <a href="#">작성글 관리</a>
+                                    <a th:href="@{/member/myBoardList}">작성글 관리</a>
                                 </li>
                             </ul>
                         </li>
