--- a/src/main/resources/static/css/member/adminMemberList.css
+++ b/src/main/resources/static/css/member/adminMemberList.css
@@ -90,8 +90,14 @@ h2{
   width: 83%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border: 1px solid #b9b9b9;
   box-shadow: 5px 5px 5px 1px grey;
+}
+
+.tools .search{
+  padding: 5px 10px;
+  box-sizing: border-box;
 }
 
 .tools .page{
