--- a/src/main/resources/static/css/member/memberDetail.css
+++ b/src/main/resources/static/css/member/memberDetail.css
@@ -17,7 +17,7 @@
   height: auto;
   box-sizing: border-box;
   background-color: #ffffff;
-  border-top: 1px solid #000000;
+  /* border-top: 1px solid #000000; */
   /* border: 1px solid #ffff00; */
   padding: 30px;
   padding-left: 330px;
