--- a/src/main/resources/templates/admin/adminBoardList.html
+++ b/src/main/resources/templates/admin/adminBoardList.html
@@ -25,6 +25,7 @@
                                     <th>내용</th>
                                     <th>조회수</th>
                                     <th>등록일</th>
+                                    <th>수정일</th>
                                     <th>댓글수</th>
                                     <th>작성자</th>
                                     <th>상세</th>
@@ -37,6 +38,7 @@
                                     <td th:text="${board.boardContent}"></td>
                                     <td th:text="${board.boardHit}"></td>
                                     <td th:text="${#temporals.format(board.boardCreate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                    <td th:text="${#temporals.format(board.boardUpdate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                                     <td th:text="${board.boardCmcount}"></td>
                                     <td th:text="${board.mName}"></td>
                                     <td><a th:href="@{|/board/boardDetail/${board.boardId}|}">보기</a></td>
@@ -50,9 +52,9 @@
                                 <form th:action="@{/board/adminBoardSearch}" method="get">
                                     <select name="type" id="type">
                                         <option value="" selected>::검색기준::</option>
-                                        <option value="boardId">게시글번호</option>
-                                        <option value="boardTitle">게시글제목</option>
-                                        <option value="boardContent">게시글내용</option>
+                                        <option value="boardId">번호</option>
+                                        <option value="boardTitle">제목</option>
+                                        <option value="boardContent">내용</option>
                                     </select>
                                     <input type="text" name="search" id="search">
                                     <input type="submit" value="검색">
