--- a/src/main/resources/templates/member/memberDetail.html
+++ b/src/main/resources/templates/member/memberDetail.html
@@ -20,7 +20,7 @@
                             <div class="member">
                                 <div class="img">
                                     <span th:if="${memberDto.mAttach==1}">
-                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px; object-fit: cover;" alt="">
+                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px;" alt="">
                                     </span>
                                     <span th:unless="${memberDto.mAttach==1}">
                                         <img src="https://via.placeholder.com/300" alt="">
