--- a/src/main/resources/templates/member/memberUpdate.html
+++ b/src/main/resources/templates/member/memberUpdate.html
@@ -6,6 +6,35 @@
     <title>memberUpdate</title>
     <script th:src="@{/js/telCheck.js}" defer></script>
     <link rel="stylesheet" th:href="@{/css/member/memberUpdate.css}">
+    <!-- 주소 API -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script>
+        function sample6_execDaumPostcode() {
+            new daum.Postcode({
+                oncomplete: function(data) {
+                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+    
+                    // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                    var addr = ''; // 주소 변수
+                    var extraAddr = ''; // 참고항목 변수
+    
+                    //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                    if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                        addr = data.roadAddress;
+                    } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                        addr = data.jibunAddress;
+                    }
+    
+                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                    document.getElementById('sample6_postcode').value = data.zonecode;
+                    document.getElementById("sample6_address").value = addr;
+                    // 커서를 상세주소 필드로 이동한다.
+                    document.getElementById("sample6_detailAddress").focus();
+                }
+            }).open();
+        }
+    </script>
 </head>
 
 <body>
@@ -21,7 +50,7 @@
                             <div class="member">
                                 <div class="img">
                                     <span th:if="${memberDto.mAttach==1}">
-                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px; object-fit: cover;" alt="">
+                                        <img th:src="@{|/upload/${memberDto.saveName}|}" style="width: 300px; height: 300px;" alt="">
                                     </span>
                                     <span th:if="${memberDto.mAttach==0}">
                                         <img src="https://via.placeholder.com/300" alt="">
@@ -59,13 +88,18 @@
                                                 </div>
                                             </li>
                                             <li>
-                                                <label>Address</label>
+                                                <sapn class="spanAddr">Address</sapn>
                                                 <div class="address">
-                                                    <input type="text" name="mZipcode" th:value="${memberDto.mZipcode}">
-                                                    <input type="text" name="mAddr1" th:value="${memberDto.mAddr1}">
-                                                    <input type="text" name="mAddr2" th:value="${memberDto.mAddr2}">
+                                                    <div class="zipcode">
+                                                        <input type="text" class="zipcode" th:field="*{mZipcode}" id="sample6_postcode" placeholder="우편번호">
+                                                        <input type="button" class="zipBtn" onclick="sample6_execDaumPostcode()" value="우편번호 찾기">
+                                                    </div>
+                                                    <div class="addr">
+                                                        <input type="text" th:field="*{mAddr1}" id="sample6_address" placeholder="주소">
+                                                        <input type="text" th:field="*{mAddr2}" id="sample6_detailAddress" placeholder="상세주소">
+                                                        <!-- <input type="text" th:field="*{mAddr2}" id="sample6_extraAddress" placeholder="참고항목"> -->
+                                                    </div>
                                                 </div>
-                                                
                                             </li>
                                             <li>
                                                 <label th:for="mPosition">Position</label>
@@ -79,7 +113,7 @@
                                                 </select>
                                             </li>
                                             <li>
-                                                <label th:for="mIntro">Introduce</label>
+                                                <span class="spanIntro">Introduce</span>
                                                 <textarea name="mIntro" th:text="${memberDto.mIntro}" cols="33" rows="10" style="resize:none;"></textarea>
                                             </li>
                                             <li>
